# TechSensing

./: .env.example  .gitignore  Makefile  pyproject.toml  requirements.txt
app/: main.py  socket_handler.py
app/middlewares/: auth.py
app/routes/: lir.py  sensing.py
core/: config.py  constants.py
core/lir/: __init__.py  backtest.py  canonicalization.py  config.py  dedup.py  extraction.py  models.py  patterns.py  pipeline.py  scoring.py  storage.py
core/llm/: client.py  telemetry.py
core/models/: document.py
core/parsers/: excel_utils.py  main.py
core/sensing/: alerts.py  aliases.py  annotations.py  byo_urls.py  cache.py  china_focus.py  china_sources.py  classify.py  collaboration.py  company_analysis.py  company_timeline.py  comparison.py  config.py  contradiction.py  cross_domain.py  dashboard.py  date_filter.py  dedup.py  deep_dive.py  diff.py  document_source.py  domain_reference.py  email_digest.py  enhancer.py  exclusions.py  experience_memory.py  feedback_consolidator.py  hallucination_probe.py  hiring_signals.py  india_focus.py  india_sources.py  ingest.py  integrations.py  investment_aggregator.py  jira_export.py  key_companies.py  lifecycle.py  linear_export.py  model_release_extractor.py  model_release_injector.py  (+32 more)
core/services/: sqlite_manager.py
core/utils/: generation_status.py  (+2 more)
docs/: CHANGELOG.md  tech-sensing-improvement-plan.md
frontend/: config.ts  index.html  package-lock.json  package.json  tailwind.config.ts
scripts/: diagnose_aa_video.py  diagnose_internal_classifier.py  diagnose_memory.py
tests/: conftest.py
(+123 files in other folders)
